# devbox

./: README.md  makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/devbox/: __init__.py  cli.py  devcontainer.py  utils.py
src/testdata/: devctest.json
src/tests/: test_devcontainer.py  test_utils.py
