[project]
name = "devbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Claudio Masolo", email = "claudio.masolo@nearform.com" }
]
requires-python = ">=3.9"
dependencies = [
    "docker>=7.1.0",
    "typer>=0.20.0",
]

[project.scripts]
devbox = "devbox:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
